--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="O mais simples e prático que você vai ver.">
   
   
-  <title>Portifolio</title>
+  <title>Portfolio</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -40,7 +40,7 @@
 						<img src="assets/images/imagem-do-whatsapp-de-2025-04-15-s-05.04.31-16ba8c7e.jpg-1-240x427.jpeg" alt="zaK Port" style="height: 3rem;">
 					</a>
 				</span>
-				<span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html#top">Portfólio</a></span>
+				<span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-4" href="index.html#top">Portfolio</a></span>
 			</div>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
 				<div class="hamburger">
